# llm-rustyolo

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rustyolo.toml.example  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITHUB_RELEASE_NOTES.md  GITHUB_RELEASE_NOTES_v0.3.1.md  HOMEBREW_SETUP.md  INSTALL.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  deny.toml  entrypoint.sh  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  release.yml  rust-ci.yml  secret-scanning.yml  security-audit.yml
docs/: README.md
docs/development/: homebrew-setup.md  linting.md  release-process.md
docs/development/release-checklists/: release-checklist-v0.3.1.md
docs/guides/: configuration.md  gemini-authentication.md  installation.md
docs/releases/: v0.1.0.md  v0.4.0.md  v0.5.1.md  v0.6.0.md
docs/security/: security-policy.md
homebrew/: README.md  rustyolo.rb
hooks/: README.md  install.sh  pre-commit
scripts/: setup-git-secrets.sh  setup-secret-scanning.sh
seccomp/: README.md  seccomp-default.json  seccomp-restrictive.json
src/: config.rs  main.rs  update.rs
