[package]
name = "rustyolo"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
dirs = "5.0.1"
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[lints.clippy]
# Deny clippy warnings in CI/strict mode
# Run with: cargo clippy -- -D warnings

# Pedantic lints (best practices)
pedantic = { level = "warn", priority = -1 }

# Specific lints to enforce
# Note: lint groups must have lower priority than individual lints
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too noisy
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
